--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,18 @@
     <groupId>org.maskmaster</groupId>
     <artifactId>maskmaster-core</artifactId>
     <version>1.0.0-alpha1</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
